FEATURE-2: openapi generated
