# server/src/generated/openapi/api_authentication.go
@@ -1,0 +1,84 @@
+/*
+ * Let's go Blog API
+ *
+ * Application providing Blog.
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+import (
+	"encoding/json"
+	"net/http"
+	"strings"
+)
+
+// AuthenticationAPIController binds http requests to an api service and writes the service results to the http response
+type AuthenticationAPIController struct {
+	service      AuthenticationAPIServicer
+	errorHandler ErrorHandler
+}
+
+// AuthenticationAPIOption for how the controller is set up.
+type AuthenticationAPIOption func(*AuthenticationAPIController)
+
+// WithAuthenticationAPIErrorHandler inject ErrorHandler into controller
+func WithAuthenticationAPIErrorHandler(h ErrorHandler) AuthenticationAPIOption {
+	return func(c *AuthenticationAPIController) {
+		c.errorHandler = h
+	}
+}
+
+// NewAuthenticationAPIController creates a default api controller
+func NewAuthenticationAPIController(s AuthenticationAPIServicer, opts ...AuthenticationAPIOption) Router {
+	controller := &AuthenticationAPIController{
+		service:      s,
+		errorHandler: DefaultErrorHandler,
+	}
+
+	for _, opt := range opts {
+		opt(controller)
+	}
+
+	return controller
+}
+
+// Routes returns all the api routes for the AuthenticationAPIController
+func (c *AuthenticationAPIController) Routes() Routes {
+	return Routes{
+		"PostLogin": Route{
+			strings.ToUpper("Post"),
+			"/letsgo/v1/api/login",
+			c.PostLogin,
+		},
+	}
+}
+
+// PostLogin - provides JWT token
+func (c *AuthenticationAPIController) PostLogin(w http.ResponseWriter, r *http.Request) {
+	loginRequestParam := LoginRequest{}
+	d := json.NewDecoder(r.Body)
+	d.DisallowUnknownFields()
+	if err := d.Decode(&loginRequestParam); err != nil {
+		c.errorHandler(w, r, &ParsingError{Err: err}, nil)
+		return
+	}
+	if err := AssertLoginRequestRequired(loginRequestParam); err != nil {
+		c.errorHandler(w, r, err, nil)
+		return
+	}
+	if err := AssertLoginRequestConstraints(loginRequestParam); err != nil {
+		c.errorHandler(w, r, err, nil)
+		return
+	}
+	result, err := c.service.PostLogin(r.Context(), loginRequestParam)
+	// If an error occurred, encode the error with the status code
+	if err != nil {
+		c.errorHandler(w, r, err, &result)
+		return
+	}
+	// If no error, encode the body and the result code
+	EncodeJSONResponse(result.Body, &result.Code, w)
+}
