# server/src/generated/openapi/model_login_request.go
@@ -1,0 +1,26 @@
+/*
+ * Let's go Blog API
+ *
+ * Application providing Blog.
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+type LoginRequest struct {
+	User string `json:"user,omitempty"`
+
+	Pw string `json:"pw,omitempty"`
+}
+
+// AssertLoginRequestRequired checks if the required fields are not zero-ed
+func AssertLoginRequestRequired(obj LoginRequest) error {
+	return nil
+}
+
+// AssertLoginRequestConstraints checks if the values respects the defined constraints
+func AssertLoginRequestConstraints(obj LoginRequest) error {
+	return nil
+}
