# server/src/generated/openapi/model_statistic.go
@@ -10,15 +10,26 @@
 package openapi
 
 type Statistic struct {
-	Userid string `json:"userid,omitempty"`
+	Userid string `json:"userid"`
 
-	AmountBlog int32 `json:"amountBlog,omitempty"`
+	AmountBlog int32 `json:"amountBlog"`
 
-	AmountComment int32 `json:"amountComment,omitempty"`
+	AmountComment int32 `json:"amountComment"`
 }
 
 // AssertStatisticRequired checks if the required fields are not zero-ed
 func AssertStatisticRequired(obj Statistic) error {
+	elements := map[string]interface{}{
+		"userid":        obj.Userid,
+		"amountBlog":    obj.AmountBlog,
+		"amountComment": obj.AmountComment,
+	}
+	for name, el := range elements {
+		if isZero := IsZeroValue(el); isZero {
+			return &RequiredError{Field: name}
+		}
+	}
+
 	return nil
 }
 
